[package]
name = "twob-keepers"
version = "0.1.0"
edition = "2024"

[dependencies]
anchor-client = { version = "0.32.1", features = ["async"] }
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
anyhow = "1.0.93"
base64 = "0.22.1"
deadpool-postgres = "0.14"
dotenv = "0.15.0"
futures-util = "0.3.31"
serde_json = "1.0.149"
solana-pubsub-client = "2.3.13"
solana-rpc-client-types = "2.3.13"
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = "0.7.15"
